default.png 이슈 해결
이미지 파일은 여백 있게 변경